Fix bug where page overflows by setting the default padding and margin on the page to 0

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .bound {
   border: 2px solid black;
   position: fixed;
