--- a/src/styles/GameWrapper.scss
+++ b/src/styles/GameWrapper.scss
@@ -41,9 +41,14 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
+  height: calc(100vh - 100px);
+  width: 100%;
   overflow: hidden;
+}
+
+.draggables-container {
+  width: inherit;
+  height: inherit;
 }
 
 #yearbook-button {
